test: Added env flag to test runner

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "commit": "node ./index.js --commit",
     "release": "node ./index.js --release",
     "lint": "eslint ./",
-    "test": "jest"
+    "test": "jest --env=node"
   },
   "dependencies": {
     "conventional-commit-types": "^2.2.0",
